trying to fix small layout issues on iphone 13 mini

--- a/styles/index.css
+++ b/styles/index.css
@@ -126,7 +126,7 @@ html {
 
 @media (max-width: 900px) {
     #main-title {
-        font-size: 10vw;
+        font-size: 9.5vw;
     }
     #sub-title {
         font-size: 4vw;
